# personal-translator

./: .env.example  .gitignore  README.md  SPEC.md  build-msi.bat  package-lock.json  package.json  playwright.config.ts  turbo.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  globals.css
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: android.json  default.json
apps/desktop/src-tauri/src/: keystore.rs  lib.rs  server.rs  translate.rs
apps/desktop/src/components/: AppInit.tsx  LanguageSelect.tsx  MicButton.tsx  SettingsButton.tsx  SettingsModal.tsx  StatusBar.tsx
apps/desktop/src/lib/: audio.ts  languages.ts
apps/desktop/src/store/: index.ts  translatorSlice.ts
apps/server/: package.json
apps/server/src/: engine.ts  index.ts
apps/server/src/providers/: errors.ts  factory.ts
apps/server/src/providers/sarvam/: errors.ts  index.ts  stt.ts  translate.ts  tts.ts
apps/web/: package.json  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: LanguageSelect.tsx  MicButton.tsx  StatusBar.tsx
apps/web/src/lib/: audio.ts
scripts/: generate-fixture.ts
tests/e2e/: translator.spec.ts
